# servertool

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  README.zh-CN.md  plan.md  pyproject.toml  servertool  spec.smoke.json  spec.smoke.train.json
.github/workflows/: ci.yml
docs/: README.md  admin-guide.zh-CN.md  architecture.zh-CN.md  member-guide.zh-CN.md
examples/: README.md  smoke_train.py
examples/config/: lab.env.example  smtp.env.example  user.env.example
src/servertool/: __init__.py  app.py  config.py  context.py  layout.py  notify_email.py  output.py  remote.py  runner_state.py  spec.py  system.py
src/servertool/commands/: __init__.py  admin.py  configure.py  disk.py  doctor.py  init.py  jobs.py  quickstart.py  remote.py  request.py  run.py  runner.py  spec.py  status.py  testjob.py
src/servertool/controller/: __init__.py  bootstrap.py  cleanup.py  records.py  runs.py  transport.py
src/servertool/runner/: __init__.py  assets.py  notify_email.py  state.py
src/servertool/shared/: __init__.py  config.py  layout.py  spec.py  system.py
tests/: test_cli_surface.py  test_config.py  test_layout.py  test_quickstart.py  test_remote.py  test_repository_safety.py  test_run_command.py  test_runner.py  test_spec.py
