[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "servertool"
version = "3.0.0"
description = "Python CLI for managing resources and SLURM workloads on Ubuntu server clusters"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "zanewang" }
]
keywords = ["slurm", "cluster", "cli", "gpu", "scheduler"]

[project.urls]
Homepage = "https://github.com/zaneWWWWWW/servertool"
Repository = "https://github.com/zaneWWWWWW/servertool"

[project.scripts]
servertool = "servertool.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
